force-app/main/default/objects/CEMS_Employee_Project__c/CEMS_Employee_Project__c.object-meta.xml
<CustomObject>
    <label>Employee Projects</label>
    <nameField>
        <displayFormat>EP-{0000}</displayFormat>
        <label>Employee Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>