force-app/main/default/objects/CEMS_Employee_Project__c/fields/CEMS_Employee__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Employee__c</fullName>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CEMS_Personnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Employee Projects</relationshipLabel>
    <relationshipName>Employee_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>