force-app/main/default/objects/CEMS_Employee_Project__c/fields/CEMS_Employee_s_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Employee_s_Project_End_Date__c</fullName>
    <label>Employee&apos;s Project End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>