force-app/main/default/objects/CEMS_Employee_Project__c/fields/CEMS_Project_Responsiblity__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Project_Responsiblity__c</fullName>
    <label>Project Responsiblity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>