force-app/main/default/objects/CEMS_Employee_Project__c/fields/CEMS_Project_Role__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Project_Role__c</fullName>
    <label>Project Role</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>