force-app/main/default/objects/CEMS_Employee_Project__c/fields/CEMS_Projects__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Projects__c</fullName>
    <label>Projects</label>
    <referenceTo>CEMS_Projects__c</referenceTo>
    <relationshipName>Employee_Projects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>