force-app/main/default/objects/CEMS_Employee_Project__c/validationRules/EP_and_Project_start_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>EP_and_Project_start_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>CEMS_Employee__r.CEMS_Joined_Date__c  &gt;=  CEMS_Employee_s_Project_Start_Date__c</errorConditionFormula>
    <errorDisplayField>CEMS_Employee_s_Project_Start_Date__c</errorDisplayField>
    <errorMessage>Joining date cannot be less than employee start date</errorMessage>
</ValidationRule>