force-app/main/default/objects/CEMS_Employee_Project__c/validationRules/EP_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>EP_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>CEMS_Employee_s_Project_Start_Date__c   &gt;=    CEMS_Employee_s_Project_End_Date__c</errorConditionFormula>
    <errorDisplayField>CEMS_Employee_s_Project_End_Date__c</errorDisplayField>
    <errorMessage>Start Date cannot be same or greater than End Date.</errorMessage>
</ValidationRule>