force-app/main/default/objects/CEMS_Employee_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CEMS_Employee__c</columns>
    <columns>CEMS_Employee_s_Project_End_Date__c</columns>
    <columns>CEMS_Employee_s_Project_Start_Date__c</columns>
    <columns>CEMS_Project_Responsiblity__c</columns>
    <columns>CEMS_Project_Role__c</columns>
    <columns>CEMS_Projects__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>